<resources>
    <string name="app_name">Tuk-Tuk</string>
    <string name="tuktuk">TuKTuK</string>
    <string name="userlogin">User login</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="sendotp">Send OTP</string>
    <string name="enterpassword">Enter Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="enterotp">Enter OTP</string>
    <string name="resetpassword">Reset Password</string>
    <string name="title_activity_user_registration">UserRegistration</string>



    <string name="switchtodriver">Switch to driver</string>
</resources>