<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
  <TextView
      android:id="@+id/Name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tuktuk"
      android:textSize="60sp"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="#070606"
      android:textStyle="bold"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="90dp"
      android:layout_marginBottom="30dp"
      />

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/phonenumber"
      android:id="@+id/PhoneNumber"
      android:inputType="phone"
      android:layout_margin="10dp" />
  <Button
      android:layout_gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sendotp"
      android:id="@+id/SendOtp"
      android:layout_margin="10dp"
      android:onClick="sendOtp"/>
  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enterotp"
      android:id="@+id/Otp"
      android:layout_margin="10dp"
      android:inputType="text" />
  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enterpassword"
      android:id="@+id/Password"
      android:inputType="textPassword"
      android:layout_margin="10dp" />
  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/confirmpassword"
      android:id="@+id/ConfirmPassword"
      android:inputType="textPassword"
      android:layout_margin="10dp"
      />
  <Button
      android:layout_gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/signup"
      android:id="@+id/SignUpButton"
      android:layout_margin="10dp"/>

</LinearLayout>