<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuktuk"
        android:textSize="60sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#070606"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phonenumber"
        android:id="@+id/ResetPasswordNumber"
        android:inputType="phone"
        android:layout_margin="10dp" />
    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendotp"
        android:id="@+id/SendResetOtp"
        android:layout_margin="10dp"
        android:onClick="sendResetOtp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterotp"
        android:id="@+id/ResetOtp"
        android:layout_margin="10dp"
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterpassword"
        android:id="@+id/ResetPassword"
        android:inputType="textPassword"
        android:layout_margin="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmpassword"
        android:id="@+id/ResetConfirmPassword"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        />
    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetpassword"
        android:id="@+id/ResetPasswordButton"
        android:layout_margin="10dp"/>

</LinearLayout>